correction for Chl algo + extract spectra

--- a/notebook/s2grs_cube.ipynb
+++ b/notebook/s2grs_cube.ipynb
@@ -351,11 +351,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NASA OC2 fro MODIS; bands 488, 547 nm\n",
     "a = [0.2500,-2.4752,1.4061,-2.8233,0.5405]\n",
+    "# NASA OC2 for OCTS; bands 490, 565 nm\n",
+    "a = [0.2236,-1.8296,1.9094,-2.9481,-0.1718]\n",
+    "\n",
     "ratio = np.log10(Rrs_masked.isel(wl=1)/Rrs_masked.isel(wl=2))\n",
     "logchl=0\n",
     "for i in range(len(a)):\n",
-    "    logchl=ratio**i\n",
+    "    logchl+=a[i]*ratio**i\n",
     "chl = 10**(logchl)\n",
     "chl.name='chl in mg.m-3 from OC2'"
    ]
