features for notebooks

--- a/notebook/s2grs_cube.ipynb
+++ b/notebook/s2grs_cube.ipynb
@@ -340,6 +340,7 @@
    "id": "2e2e8cac-0963-4371-a422-3303dcc8c3f9",
    "metadata": {},
    "source": [
+    "# L2B algorithm to get biogeochemical parameters\n",
     "## Check blue over green ratio for Chl retrieval with OC2 from NASA\n",
     "$log_{10}(chlor\\_a) = a_0 + \\sum\\limits_{i=1}^4 a_i \\left(log_{10}\\left(\\frac{R_{rs}(\\lambda_{blue})}{R_{rs}(\\lambda_{green})}\\right)\\right)^i$"
    ]
