features for notebooks

--- a/notebook/s2grs_thau.ipynb
+++ b/notebook/s2grs_thau.ipynb
@@ -114,9 +114,9 @@
     "select =grstbx.select_files()\n",
     "# if you need to change the root path\n",
     "select.root='/home/harmel/Dropbox/satellite/S2'\n",
-    "\n",
-    "select.list_tile(tile=tile,product='cnes')\n",
-    "files = select.list_file_path(('2022-01','2022-04-15'))"
+    "select.root='/media/harmel/TOSHIBA EXT/data/satellite'\n",
+    "select.list_tile(tile=tile,product='S2_L2GRS')\n",
+    "files = select.list_file_path(('2018-08','2018-11-15'))"
    ]
   },
   {
@@ -145,14 +145,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c329b52b-3878-441c-a109-fd436dd5f831",
-   "metadata": {},
-   "source": [
-    "## Load and subset image series"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9a65759f-4d55-44bb-8388-b4f8c8040699",
@@ -162,6 +154,14 @@
    "outputs": [],
    "source": [
     "bathy.explore(cmap=plt.cm.Spectral_r,height=500,width=600)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c329b52b-3878-441c-a109-fd436dd5f831",
+   "metadata": {},
+   "source": [
+    "## Load and subset image series"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc.datacube"
+    "dc.Rrs"
    ]
   },
   {
@@ -332,7 +332,7 @@
    },
    "outputs": [],
    "source": [
-    "Rrs_masked.isel(wl=2).plot(col='time',col_wrap=5,vmin=0,vmax=0.03, robust=True,cmap=plt.cm.Spectral_r,aspect=1.7)"
+    "Rrs_masked.isel(wl=2).plot(col='time',col_wrap=5,vmin=0,vmax=0.03, robust=True,cmap=plt.cm.Spectral_r,aspect=1.6)"
    ]
   },
   {
@@ -447,6 +447,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from holoviews import opts\n",
+    "\n",
+    "opts.defaults(\n",
+    "    opts.GridSpace(shared_xaxis=True, shared_yaxis=True),\n",
+    "    opts.Image(cmap='binary_r', width=800, height=700),\n",
+    "    opts.Labels(text_color='white', text_font_size='8pt', text_align='left', text_baseline='bottom'),\n",
+    "    opts.Path(color='white'),\n",
+    "    opts.Spread(width=900),\n",
+    "    opts.Overlay(show_legend=True))\n",
     "# set the parameter for spectra extraction\n",
     "hv.extension('bokeh')\n",
     "pn.extension()\n",
@@ -530,15 +539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from holoviews import opts\n",
     "\n",
-    "opts.defaults(\n",
-    "    opts.GridSpace(shared_xaxis=True, shared_yaxis=True),\n",
-    "    opts.Image(cmap='binary_r', width=800, height=700),\n",
-    "    opts.Labels(text_color='white', text_font_size='8pt', text_align='left', text_baseline='bottom'),\n",
-    "    opts.Path(color='white'),\n",
-    "    opts.Spread(width=900),\n",
-    "    opts.Overlay(show_legend=True))\n",
     "# visualize and play\n",
     "graphs = ((mean* std *hlines).relabel('Rrs'))\n",
     "layout = (im * polys +graphs    ).opts(\n",
@@ -675,6 +676,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcf69a64-654f-4426-ab82-e22b0cf4cd8b",
+   "metadata": {},
+   "source": [
+    "# CDOM retrieval based on Brezonik et al, 2015\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97ecc081-cc39-4437-88a5-a5ce8526d218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1.872,-0.83]\n",
+    "acdom = np.exp(a[0] + a[1] * np.log(Rrs_masked.isel(wl=1)/Rrs_masked.isel(wl=5)))\n",
+    "acdom.name='CDOM absorption at 440 nm-1'\n",
+    "acdom= acdom.where((acdom >= 0) & (acdom <= 10))\n",
+    "acdom.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f68f5a42-6948-42b6-98d4-5693dc0366a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visual.image_viewer().param_date(acdom,cmap='bgyw')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3be5aec8-4d6e-4d97-abdd-8a623e39d908",
+   "metadata": {},
+   "source": [
+    "# Total suspended particulate matter (SPM) from Nechad et al., 2010, 2016 formulation\n",
+    "spm in mg/L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd90de13-6855-44f9-98ae-434d7bfa8502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [610.94*np.pi, 0.2324/np.pi]\n",
+    "Rrs_ = Rrs_masked.isel(wl=3)\n",
+    "spm = a[0] * Rrs_ / (1 - ( Rrs_/ a[1]))\n",
+    "spm.name='CDOM absorption at 440 nm-1'\n",
+    "spm= spm.where((spm >= 0) & (spm <= 150))\n",
+    "spm.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28034374-73c6-45c9-b4c1-574960ec3761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visual.image_viewer().param_date(spm,cmap='bgyw')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "57a4eaf7-2578-440e-ae90-5e03c2aeb432",
@@ -728,10 +795,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "raster = spm\n",
     "\n",
-    "param = 'chl in mg.m-3 from OC2'\n",
+    "param = raster.name\n",
     "third_dim = 'time'\n",
-    "raster = chl\n",
     "time= raster.time.data\n",
     "Ntime = len(time)\n",
     "ds = hv.Dataset(raster.persist())\n",
@@ -750,6 +817,7 @@
     "    for i, (x0, x1, y0, y1) in enumerate(data):\n",
     "        selection = ds.select(x=(x0, x1), y=(y0, y1))\n",
     "        mean = selection.aggregate(third_dim, np.nanmean).data\n",
+    "        print(mean)\n",
     "        #std = selection.aggregate(third_dim, np.std).data\n",
     "        time = mean[third_dim]\n",
     "\n",
@@ -767,8 +835,8 @@
     "    data = zip(data['x0'], data['x1'], data['y0'], data['y1'])\n",
     "    for i, (x0, x1, y0, y1) in enumerate(data):\n",
     "        selection = ds.select(x=(x0, x1), y=(y0, y1))\n",
-    "        mean = selection.aggregate(third_dim, np.mean).data\n",
-    "        std = selection.aggregate(third_dim, np.std).data\n",
+    "        mean = selection.aggregate(third_dim, np.nanmean).data\n",
+    "        std = selection.aggregate(third_dim, np.nanstd).data\n",
     "        time = mean[third_dim]\n",
     "\n",
     "        curves[i]=  hv.Spread((time,mean[param],std[param]),fill_alpha=0.3)\n",
@@ -782,10 +850,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed776ce8-c7ab-435c-aefd-001a75364062",
+   "id": "e564ea4e-ddbf-4f91-9c59-737b629cd5f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# visualize and play\n",
+    "graphs = ((mean*std ).relabel(param))\n",
+    "layout = (im * polys +graphs    ).opts(\n",
+    "    opts.Curve(width=600, framewise=True), \n",
+    "    opts.Polygons(fill_alpha=0.2, color='green',line_color='black'), \n",
+    "    ).cols(2)\n",
+    "layout "
+   ]
   },
   {
    "cell_type": "code",
@@ -794,7 +870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = ds.select(x=(0,10000000), y=(0, 10000000))\n",
+    "selection = ds.select(x=(547000,547200), y=(4802000, 4803000))\n",
     "mean = selection.aggregate(third_dim, np.nanmean).data\n",
     "std = selection.aggregate(third_dim, np.std).data\n",
     "time = mean[third_dim]\n",
@@ -802,23 +878,7 @@
     "for i in [0,1,2]:\n",
     "    curves[i]=hv.Curve((time,mean[param]),'time', param)\n",
     "\n",
-    "hv.DynamicMap(hv.NdOverlay(curves))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e564ea4e-ddbf-4f91-9c59-737b629cd5f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# visualize and play\n",
-    "graphs = ((mean ).relabel(param))\n",
-    "layout = (im * polys +graphs    ).opts(\n",
-    "    opts.Curve(width=600, framewise=True,xlim=(400,1000)), \n",
-    "    opts.Polygons(fill_alpha=0.2, color='green',line_color='black'), \n",
-    "    ).cols(2)\n",
-    "layout "
+    "hv.DynamicMap(hv.NdOverlay(curves)).opts(width=600)"
    ]
   },
   {
