--- a/notebook/grstbx_test_l2tol3.ipynb
+++ b/notebook/grstbx_test_l2tol3.ipynb
@@ -19,13 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8baeae6-5bc5-4243-ba7a-0c10257db2ee",
+   "id": "18e076d0-205a-4808-9616-d93baab19cd6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\n",
     "import glob\n",
     "import os\n",
     "import numpy as np\n",
@@ -42,18 +41,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "#mpl.use('TkAgg')\n",
-    "import hvplot.xarray\n",
     "\n",
-    "import holoviews as hv\n",
-    "import holoviews.operation.datashader as hd\n",
-    "from holoviews import opts\n",
-    "hv.extension('bokeh')\n",
-    "import datashader as ds\n",
-    "from datashader import transfer_functions as tf \n",
-    "import colorcet as cc\n",
-    "import panel as pn\n",
-    "import panel.widgets as pnw\n",
-    "#import ipywidgets as widgets\n",
     "\n",
     "import pyproj as ppj\n",
     "import rasterio\n",
@@ -69,6 +57,29 @@
     "opj = os.path.join\n",
     "\n",
     "grstbx.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7440a10c-e456-4f18-9b8c-b17d9dde64d4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import hvplot.xarray\n",
+    "\n",
+    "import holoviews as hv\n",
+    "import holoviews.operation.datashader as hd\n",
+    "from holoviews import opts\n",
+    "hv.extension('bokeh')\n",
+    "import datashader as ds\n",
+    "from datashader import transfer_functions as tf \n",
+    "import colorcet as cc\n",
+    "import panel as pn\n",
+    "import panel.widgets as pnw\n",
+    "#import ipywidgets as widgets\n"
    ]
   },
   {
@@ -177,7 +188,7 @@
     "\n",
     "# generate datacube\n",
     "dc = grstbx.l2grs(files)\n",
-    "dc.load(subset=bbox,reshape=True, reproject=True)"
+    "dc.load(subset=bbox,reshape=False, reproject=False)"
    ]
   },
   {
@@ -209,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc.Rrs.Rrs"
+    "dc.datacube"
    ]
   },
   {
@@ -230,21 +241,137 @@
    },
    "outputs": [],
    "source": [
-    "mask = (masking_.get_mask(high_nir=True) | masking_.get_mask(hicld=True)) | (dc.Rrs.Rrs.isel(wl=2) < 0.0002)"
+    "mask = (masking_.get_mask(high_nir=True) | masking_.get_mask(hicld=True)) | (dc.datacube.Rrs_B3 < 0.0002)\n",
+    "#mask.compute()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d3d0a5b-e4b4-4ab5-bd02-1a778fcd5738",
-   "metadata": {
-    "tags": []
-   },
+   "id": "978ba6f2-fb0f-46bb-965d-7693c1b15bc1",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Rrs_masked = dc.Rrs.Rrs.where(mask==0).dropna('time','all')\n",
-    "BRDFg = dc.datacube.BRDFg.where(mask==0).dropna('time','all')\n",
-    "BRDFg = BRDFg.where(masking_.get_mask(ndwi=False),drop=True)"
+    "# compute number of valid pixels per date\n",
+    "mask_ts =  (~mask).sum(['x','y']).compute()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f84f9a9d-7cf1-47f9-b793-cfc9b4ad07b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_pix = mask_ts / mask_ts.max()\n",
+    "valid_pix.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "569c4bdf-cff0-4792-a00b-6c3b2d7722fa",
+   "metadata": {},
+   "source": [
+    "Drop dates with valid pixel below a threshold, for example keep date when valid pixels are at least 60%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258a832f-81df-4d6e-b601-66193e92f157",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.6\n",
+    "dc.datacube = dc.datacube.where(valid_pix>threshold,drop=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63951d7f-e835-4448-b876-bedb0c6b88c9",
+   "metadata": {},
+   "source": [
+    "Mask raster for each remaining date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c616741-1a14-4bce-9cf1-62b954d67ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dc.datacube = dc.datacube.where(mask==0,drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8f04837-1022-49ee-a103-50a92f547054",
+   "metadata": {},
+   "source": [
+    "reproject desired variables into desired epsg (by default 3857 for basemap projection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f32894-3106-4579-bfcc-dce73dc65256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dc.reproject_data_vars()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d0e983f-2a12-4ebf-9f4c-92511a49a628",
+   "metadata": {},
+   "source": [
+    "reshape your raster to add the wavelength diemension to the requested Rrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9ca03df-1a67-4bb9-9132-0fe19b1d152b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dc.reshape_raster()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bac4b55-3162-49fc-aea9-09fc0c1af2a1",
+   "metadata": {},
+   "source": [
+    "## **Fast checking of the RGB images**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5726528c-6fc2-41e2-b22c-b6f657ac20e6",
+   "metadata": {},
+   "source": [
+    "You are done with your datacube:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "940b2629-7b99-45ba-b484-0ea8e44ace22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coarsening = 3\n",
+    "fig = dc.raster.Rrs.isel(wl=2)[:,::coarsening, ::coarsening].plot(col='time', col_wrap=4,robust=True,cmap=cc.cm.CET_D13,aspect=aspect)\n",
+    "for ax in fig.axs.flat:\n",
+    "    ax.set(xticks=[], yticks=[])\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_xlabel('')\n",
+    "fig\n"
    ]
   },
   {
@@ -254,31 +381,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rrs_masked#.rio.reproject(3857, nodata=np.nan)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c10a21e-aff4-45de-a690-2a94376ae973",
-   "metadata": {},
-   "source": [
-    "## Reprojection into other coordinate reference systems"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e94fbcb-346f-4b2d-8192-b3cd13441286",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0bac4b55-3162-49fc-aea9-09fc0c1af2a1",
-   "metadata": {},
-   "source": [
-    "## **Fast checking of the RGB images**"
+    "coarsening = 2\n",
+    "fig=dc.raster.BRDFg[:,::coarsening, ::coarsening].plot(col='time', col_wrap=4,vmax=0.01,robust=True,cmap=cc.cm.gray,aspect=aspect)\n",
+    "for ax in fig.axs.flat:\n",
+    "    ax.set(xticks=[], yticks=[])\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_xlabel('')\n",
+    "fig\n"
    ]
   },
   {
@@ -293,7 +402,7 @@
     "coarsening = 2\n",
     "brightness_factor = 5\n",
     "gamma=2\n",
-    "fig = (Rrs_masked.isel(wl=bands)[:,:,::coarsening, ::coarsening]**(1/gamma)*brightness_factor).plot.imshow(col='time', col_wrap=4,robust=True,aspect=aspect)\n",
+    "fig = (dc.raster.Rrs.isel(wl=bands)[:,:,::coarsening, ::coarsening]**(1/gamma)*brightness_factor).plot.imshow(col='time', col_wrap=4,robust=True,aspect=aspect)\n",
     "for ax in fig.axs.flat:\n",
     "    ax.set(xticks=[], yticks=[])\n",
     "    ax.set_ylabel('')\n",
@@ -302,23 +411,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21aaa763-d4d0-4a71-9109-8d10b324dd29",
+   "cell_type": "markdown",
+   "id": "2d09c5c5-8176-4b5e-97ba-be20dde7429e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Rrs_masked=Rrs_masked.drop_isel(time=[4,5,11,12,28])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8aa88c45-da9c-4d2f-84d4-4db935117a7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Rrs_masked"
+    "## Export your data cube into netcdf (you can try other format, not tested so far)"
    ]
   },
   {
@@ -328,10 +425,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = Rrs_masked\n",
+    "ds = dc.raster\n",
     "comp = dict(zlib=True, complevel=5)\n",
     "encoding = {'Rrs':comp} #{var: comp for var in ds.data_vars}\n",
-    "filename='/sat_data/satellite/sentinel2/L3/test_abhe_2022_jun-dec.nc'\n",
+    "filename='/sat_data/satellite/sentinel2/L3/test_abhe_2022_nov-dec.nc'\n",
     "ds.to_netcdf(filename, encoding=encoding)"
    ]
   },
@@ -342,16 +439,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55f4d4c9-eea9-41a8-9839-efcecde65a78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visual.image_viewer().Rrs_date(Rrs_masked)"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -376,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v=visual.view_spectral(Rrs_masked,reproject=False)"
+    "v=visual.view_spectral(dc.raster.Rrs)"
    ]
   },
   {
